# xiaozhi-client-rs

./: .gitignore  Cargo.toml  README.md  devenv.nix  shell.nix
src/: client.rs  config.rs  main.rs  ota.rs  protocol.rs
src/audio/: input.rs  mod.rs  opus_codec.rs  output.rs  resample.rs
