[package]
name = "xiaozhi-client-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

cpal = "0.15"
opus = "0.3"

[profile.release]
debug = true
